fix: remove useless 'overflow hidden' from previous layout

--- a/stylus/elements/defaults.styl
+++ b/stylus/elements/defaults.styl
@@ -20,9 +20,6 @@ textarea
 // LAYOUT
 html
   height  100%
-  // Necessary not to have broken layout on iOS
-  // https://github.com/cozy/cozy-ui/issues/161
-  overflow hidden
 
 body
   display         flex
@@ -30,15 +27,12 @@ body
   align-items     stretch
   width           100vw
   height          100%
-  overflow        hidden
 
 html
 body
     +medium-screen()
         display block
         height auto
-        overflow auto
-        overflow-x hidden
 
 [role=application]
     display     flex
@@ -46,6 +40,9 @@ body
     flex        1 1 100%
     overflow-x  hidden
     overflow-y  auto
+
+     +medium-screen()
+        overflow visible
 
 // COLORS
 html,
